@@ -43,8 +43,8 @@ import org.elasticsearch.search.SearchShardTarget;
 import org.elasticsearch.search.aggregations.AggregationBuilders;
 import org.elasticsearch.search.aggregations.AggregationReduceContext;
 import org.elasticsearch.search.aggregations.InternalAggregations;
-import org.elasticsearch.search.aggregations.metrics.InternalMax;
-import org.elasticsearch.search.aggregations.pipeline.PipelineAggregator.PipelineTree;
+import org.elasticsearch.search.aggregations.metrics.Max;
+import org.elasticsearch.search.aggregations.metrics.MaxAggregationBuilder;
 import org.elasticsearch.search.builder.SearchSourceBuilder;
 import org.elasticsearch.search.fetch.FetchSearchResult;
 import org.elasticsearch.search.internal.InternalSearchResponse;
@@ -78,7 +78,6 @@ import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.concurrent.atomic.AtomicReference;
-import java.util.stream.Collectors;
 
 import static java.util.Collections.emptyList;
 import static java.util.Collections.emptyMap;
@@ -115,12 +114,12 @@ public class SearchPhaseControllerTests extends ESTestCase {
             @Override
             public AggregationReduceContext forPartialReduction() {
                 reductions.add(false);
-                return new AggregationReduceContext.ForPartial(BigArrays.NON_RECYCLING_INSTANCE, null, t);
+                return new AggregationReduceContext.ForPartial(BigArrays.NON_RECYCLING_INSTANCE, null, t, s.source().aggregations());
             }
 
             public AggregationReduceContext forFinalReduction() {
                 reductions.add(true);
-                return new AggregationReduceContext.ForFinal(BigArrays.NON_RECYCLING_INSTANCE, null, b -> {}, PipelineTree.EMPTY, t);
+                return new AggregationReduceContext.ForFinal(BigArrays.NON_RECYCLING_INSTANCE, null, t, s.source().aggregations(), b -> {});
             };
         });
         threadPool = new TestThreadPool(SearchPhaseControllerTests.class.getName());
@@ -167,7 +166,7 @@ public class SearchPhaseControllerTests extends ESTestCase {
             SearchPhaseController.setShardIndex(topDocs, result.getShardIndex());
             topDocsList.add(topDocs);
         }
-        ScoreDoc[] sortedDocs = SearchPhaseController.sortDocs(true, topDocsList, from, size, reducedCompletionSuggestions).scoreDocs;
+        ScoreDoc[] sortedDocs = SearchPhaseController.sortDocs(true, topDocsList, from, size, reducedCompletionSuggestions).scoreDocs();
         assertThat(sortedDocs.length, equalTo(accumulatedLength));
     }
 
@@ -197,7 +196,7 @@ public class SearchPhaseControllerTests extends ESTestCase {
             topDocsList.add(topDocs);
             SearchPhaseController.setShardIndex(topDocs, result.getShardIndex());
         }
-        ScoreDoc[] sortedDocs = SearchPhaseController.sortDocs(ignoreFrom, topDocsList, from, size, Collections.emptyList()).scoreDocs;
+        ScoreDoc[] sortedDocs = SearchPhaseController.sortDocs(ignoreFrom, topDocsList, from, size, Collections.emptyList()).scoreDocs();
 
         results = generateSeededQueryResults(randomSeed, nShards, Collections.emptyList(), queryResultSize, useConstantScore);
         topDocsList = new ArrayList<>();
@@ -207,7 +206,7 @@ public class SearchPhaseControllerTests extends ESTestCase {
             topDocsList.add(topDocs);
             SearchPhaseController.setShardIndex(topDocs, result.getShardIndex());
         }
-        ScoreDoc[] sortedDocs2 = SearchPhaseController.sortDocs(ignoreFrom, topDocsList, from, size, Collections.emptyList()).scoreDocs;
+        ScoreDoc[] sortedDocs2 = SearchPhaseController.sortDocs(ignoreFrom, topDocsList, from, size, Collections.emptyList()).scoreDocs();
         assertEquals(sortedDocs.length, sortedDocs2.length);
         for (int i = 0; i < sortedDocs.length; i++) {
             assertEquals(sortedDocs[i].doc, sortedDocs2[i].doc);
@@ -240,7 +239,7 @@ public class SearchPhaseControllerTests extends ESTestCase {
         boolean profile = randomBoolean();
         for (int trackTotalHits : new int[] { SearchContext.TRACK_TOTAL_HITS_DISABLED, SearchContext.TRACK_TOTAL_HITS_ACCURATE }) {
             AtomicArray<SearchPhaseResult> queryResults = generateQueryResults(nShards, suggestions, queryResultSize, false, profile);
-            SearchPhaseController.ReducedQueryPhase reducedQueryPhase = searchPhaseController.reducedQueryPhase(
+            SearchPhaseController.ReducedQueryPhase reducedQueryPhase = SearchPhaseController.reducedQueryPhase(
                 queryResults.asList(),
                 new ArrayList<>(),
                 new ArrayList<>(),
@@ -253,11 +252,11 @@ public class SearchPhaseControllerTests extends ESTestCase {
             List<SearchShardTarget> shards = queryResults.asList().stream().map(SearchPhaseResult::getSearchShardTarget).collect(toList());
             AtomicArray<SearchPhaseResult> fetchResults = generateFetchResults(
                 shards,
-                reducedQueryPhase.sortedTopDocs.scoreDocs,
-                reducedQueryPhase.suggest,
+                reducedQueryPhase.sortedTopDocs().scoreDocs(),
+                reducedQueryPhase.suggest(),
                 profile
             );
-            InternalSearchResponse mergedResponse = searchPhaseController.merge(
+            InternalSearchResponse mergedResponse = SearchPhaseController.merge(
                 false,
                 reducedQueryPhase,
                 fetchResults.asList(),
@@ -274,13 +273,13 @@ public class SearchPhaseControllerTests extends ESTestCase {
                 assertSame(searchPhaseResult.getSearchShardTarget(), hit.getShard());
             }
             int suggestSize = 0;
-            for (Suggest.Suggestion<?> s : reducedQueryPhase.suggest) {
+            for (Suggest.Suggestion<?> s : reducedQueryPhase.suggest()) {
                 suggestSize += s.getEntries().stream().mapToInt(e -> e.getOptions().size()).sum();
             }
             assertThat(suggestSize, lessThanOrEqualTo(maxSuggestSize));
-            assertThat(mergedResponse.hits().getHits().length, equalTo(reducedQueryPhase.sortedTopDocs.scoreDocs.length - suggestSize));
+            assertThat(mergedResponse.hits().getHits().length, equalTo(reducedQueryPhase.sortedTopDocs().scoreDocs().length - suggestSize));
             Suggest suggestResult = mergedResponse.suggest();
-            for (Suggest.Suggestion<?> suggestion : reducedQueryPhase.suggest) {
+            for (Suggest.Suggestion<?> suggestion : reducedQueryPhase.suggest()) {
                 assertThat(suggestion, instanceOf(CompletionSuggestion.class));
                 if (suggestion.getEntries().get(0).getOptions().size() > 0) {
                     CompletionSuggestion suggestionResult = suggestResult.getSuggestion(suggestion.getName());
@@ -406,7 +405,7 @@ public class SearchPhaseControllerTests extends ESTestCase {
             }
         }
         CompletionSuggestion completionSuggestion = new CompletionSuggestion(null, -1, randomBoolean());
-        return groupedSuggestion.values().stream().map(completionSuggestion::reduce).collect(Collectors.toList());
+        return groupedSuggestion.values().stream().map(completionSuggestion::reduce).toList();
     }
 
     private static AtomicArray<SearchPhaseResult> generateFetchResults(
@@ -467,12 +466,11 @@ public class SearchPhaseControllerTests extends ESTestCase {
     }
 
     private void consumerTestCase(int numEmptyResponses) throws Exception {
-        long beforeCompletedTasks = fixedExecutor.getCompletedTaskCount();
         int numShards = 3 + numEmptyResponses;
         int bufferSize = randomIntBetween(2, 3);
         CountDownLatch latch = new CountDownLatch(numShards);
         SearchRequest request = randomSearchRequest();
-        request.source(new SearchSourceBuilder().aggregation(AggregationBuilders.avg("foo")));
+        request.source(new SearchSourceBuilder().aggregation(new MaxAggregationBuilder("test")));
         request.setBatchedReduceSize(bufferSize);
         ArraySearchPhaseResults<SearchPhaseResult> consumer = searchPhaseController.newSearchPhaseResults(
             fixedExecutor,
@@ -504,7 +502,7 @@ public class SearchPhaseControllerTests extends ESTestCase {
             new TopDocsAndMaxScore(new TopDocs(new TotalHits(0, TotalHits.Relation.EQUAL_TO), new ScoreDoc[0]), Float.NaN),
             new DocValueFormat[0]
         );
-        InternalAggregations aggs = InternalAggregations.from(singletonList(new InternalMax("test", 1.0D, DocValueFormat.RAW, emptyMap())));
+        InternalAggregations aggs = InternalAggregations.from(singletonList(new Max("test", 1.0D, DocValueFormat.RAW, emptyMap())));
         result.aggregations(aggs);
         result.setShardIndex(0);
         consumer.consumeResult(result, latch::countDown);
@@ -518,7 +516,7 @@ public class SearchPhaseControllerTests extends ESTestCase {
             new TopDocsAndMaxScore(new TopDocs(new TotalHits(0, TotalHits.Relation.EQUAL_TO), new ScoreDoc[0]), Float.NaN),
             new DocValueFormat[0]
         );
-        aggs = InternalAggregations.from(singletonList(new InternalMax("test", 3.0D, DocValueFormat.RAW, emptyMap())));
+        aggs = InternalAggregations.from(singletonList(new Max("test", 3.0D, DocValueFormat.RAW, emptyMap())));
         result.aggregations(aggs);
         result.setShardIndex(2);
         consumer.consumeResult(result, latch::countDown);
@@ -532,7 +530,7 @@ public class SearchPhaseControllerTests extends ESTestCase {
             new TopDocsAndMaxScore(new TopDocs(new TotalHits(0, TotalHits.Relation.EQUAL_TO), new ScoreDoc[0]), Float.NaN),
             new DocValueFormat[0]
         );
-        aggs = InternalAggregations.from(singletonList(new InternalMax("test", 2.0D, DocValueFormat.RAW, emptyMap())));
+        aggs = InternalAggregations.from(singletonList(new Max("test", 2.0D, DocValueFormat.RAW, emptyMap())));
         result.aggregations(aggs);
         result.setShardIndex(1);
         consumer.consumeResult(result, latch::countDown);
@@ -565,15 +563,15 @@ public class SearchPhaseControllerTests extends ESTestCase {
         }
 
         SearchPhaseController.ReducedQueryPhase reduce = consumer.reduce();
-        assertEquals(numTotalReducePhases, reduce.numReducePhases);
+        assertEquals(numTotalReducePhases, reduce.numReducePhases());
         assertEquals(numTotalReducePhases, reductions.size());
         assertAggReduction(request);
-        InternalMax max = (InternalMax) reduce.aggregations.asList().get(0);
-        assertEquals(3.0D, max.getValue(), 0.0D);
-        assertFalse(reduce.sortedTopDocs.isSortedByField);
-        assertNull(reduce.sortedTopDocs.sortFields);
-        assertNull(reduce.sortedTopDocs.collapseField);
-        assertNull(reduce.sortedTopDocs.collapseValues);
+        Max max = (Max) reduce.aggregations().asList().get(0);
+        assertEquals(3.0D, max.value(), 0.0D);
+        assertFalse(reduce.sortedTopDocs().isSortedByField());
+        assertNull(reduce.sortedTopDocs().sortFields());
+        assertNull(reduce.sortedTopDocs().collapseField());
+        assertNull(reduce.sortedTopDocs().collapseValues());
     }
 
     public void testConsumerConcurrently() throws Exception {
@@ -581,7 +579,7 @@ public class SearchPhaseControllerTests extends ESTestCase {
         int bufferSize = randomIntBetween(2, 200);
 
         SearchRequest request = randomSearchRequest();
-        request.source(new SearchSourceBuilder().aggregation(AggregationBuilders.avg("foo")));
+        request.source(new SearchSourceBuilder().aggregation(new MaxAggregationBuilder("test")));
         request.setBatchedReduceSize(bufferSize);
         ArraySearchPhaseResults<SearchPhaseResult> consumer = searchPhaseController.newSearchPhaseResults(
             fixedExecutor,
@@ -613,7 +611,7 @@ public class SearchPhaseControllerTests extends ESTestCase {
                     new DocValueFormat[0]
                 );
                 InternalAggregations aggs = InternalAggregations.from(
-                    Collections.singletonList(new InternalMax("test", (double) number, DocValueFormat.RAW, Collections.emptyMap()))
+                    Collections.singletonList(new Max("test", (double) number, DocValueFormat.RAW, Collections.emptyMap()))
                 );
                 result.aggregations(aggs);
                 result.setShardIndex(id);
@@ -630,23 +628,23 @@ public class SearchPhaseControllerTests extends ESTestCase {
 
         SearchPhaseController.ReducedQueryPhase reduce = consumer.reduce();
         assertAggReduction(request);
-        InternalMax internalMax = (InternalMax) reduce.aggregations.asList().get(0);
-        assertEquals(max.get(), internalMax.getValue(), 0.0D);
-        assertEquals(1, reduce.sortedTopDocs.scoreDocs.length);
-        assertEquals(max.get(), reduce.maxScore, 0.0f);
-        assertEquals(expectedNumResults, reduce.totalHits.value);
-        assertEquals(max.get(), reduce.sortedTopDocs.scoreDocs[0].score, 0.0f);
-        assertFalse(reduce.sortedTopDocs.isSortedByField);
-        assertNull(reduce.sortedTopDocs.sortFields);
-        assertNull(reduce.sortedTopDocs.collapseField);
-        assertNull(reduce.sortedTopDocs.collapseValues);
+        Max internalMax = (Max) reduce.aggregations().asList().get(0);
+        assertEquals(max.get(), internalMax.value(), 0.0D);
+        assertEquals(1, reduce.sortedTopDocs().scoreDocs().length);
+        assertEquals(max.get(), reduce.maxScore(), 0.0f);
+        assertEquals(expectedNumResults, reduce.totalHits().value);
+        assertEquals(max.get(), reduce.sortedTopDocs().scoreDocs()[0].score, 0.0f);
+        assertFalse(reduce.sortedTopDocs().isSortedByField());
+        assertNull(reduce.sortedTopDocs().sortFields());
+        assertNull(reduce.sortedTopDocs().collapseField());
+        assertNull(reduce.sortedTopDocs().collapseValues());
     }
 
     public void testConsumerOnlyAggs() throws Exception {
         int expectedNumResults = randomIntBetween(1, 100);
         int bufferSize = randomIntBetween(2, 200);
         SearchRequest request = randomSearchRequest();
-        request.source(new SearchSourceBuilder().aggregation(AggregationBuilders.avg("foo")).size(0));
+        request.source(new SearchSourceBuilder().aggregation(new MaxAggregationBuilder("test")).size(0));
         request.setBatchedReduceSize(bufferSize);
         QueryPhaseResultConsumer consumer = searchPhaseController.newSearchPhaseResults(
             fixedExecutor,
@@ -672,7 +670,7 @@ public class SearchPhaseControllerTests extends ESTestCase {
                 new DocValueFormat[0]
             );
             InternalAggregations aggs = InternalAggregations.from(
-                Collections.singletonList(new InternalMax("test", (double) number, DocValueFormat.RAW, Collections.emptyMap()))
+                Collections.singletonList(new Max("test", (double) number, DocValueFormat.RAW, Collections.emptyMap()))
             );
             result.aggregations(aggs);
             result.setShardIndex(i);
@@ -683,15 +681,15 @@ public class SearchPhaseControllerTests extends ESTestCase {
 
         SearchPhaseController.ReducedQueryPhase reduce = consumer.reduce();
         assertAggReduction(request);
-        InternalMax internalMax = (InternalMax) reduce.aggregations.asList().get(0);
-        assertEquals(max.get(), internalMax.getValue(), 0.0D);
-        assertEquals(0, reduce.sortedTopDocs.scoreDocs.length);
-        assertEquals(max.get(), reduce.maxScore, 0.0f);
-        assertEquals(expectedNumResults, reduce.totalHits.value);
-        assertFalse(reduce.sortedTopDocs.isSortedByField);
-        assertNull(reduce.sortedTopDocs.sortFields);
-        assertNull(reduce.sortedTopDocs.collapseField);
-        assertNull(reduce.sortedTopDocs.collapseValues);
+        Max internalMax = (Max) reduce.aggregations().asList().get(0);
+        assertEquals(max.get(), internalMax.value(), 0.0D);
+        assertEquals(0, reduce.sortedTopDocs().scoreDocs().length);
+        assertEquals(max.get(), reduce.maxScore(), 0.0f);
+        assertEquals(expectedNumResults, reduce.totalHits().value);
+        assertFalse(reduce.sortedTopDocs().isSortedByField());
+        assertNull(reduce.sortedTopDocs().sortFields());
+        assertNull(reduce.sortedTopDocs().collapseField());
+        assertNull(reduce.sortedTopDocs().collapseValues());
     }
 
     public void testConsumerOnlyHits() throws Exception {
@@ -735,14 +733,14 @@ public class SearchPhaseControllerTests extends ESTestCase {
         latch.await();
         SearchPhaseController.ReducedQueryPhase reduce = consumer.reduce();
         assertAggReduction(request);
-        assertEquals(1, reduce.sortedTopDocs.scoreDocs.length);
-        assertEquals(max.get(), reduce.maxScore, 0.0f);
-        assertEquals(expectedNumResults, reduce.totalHits.value);
-        assertEquals(max.get(), reduce.sortedTopDocs.scoreDocs[0].score, 0.0f);
-        assertFalse(reduce.sortedTopDocs.isSortedByField);
-        assertNull(reduce.sortedTopDocs.sortFields);
-        assertNull(reduce.sortedTopDocs.collapseField);
-        assertNull(reduce.sortedTopDocs.collapseValues);
+        assertEquals(1, reduce.sortedTopDocs().scoreDocs().length);
+        assertEquals(max.get(), reduce.maxScore(), 0.0f);
+        assertEquals(expectedNumResults, reduce.totalHits().value);
+        assertEquals(max.get(), reduce.sortedTopDocs().scoreDocs()[0].score, 0.0f);
+        assertFalse(reduce.sortedTopDocs().isSortedByField());
+        assertNull(reduce.sortedTopDocs().sortFields());
+        assertNull(reduce.sortedTopDocs().collapseField());
+        assertNull(reduce.sortedTopDocs().collapseValues());
     }
 
     private void assertAggReduction(SearchRequest searchRequest) {
@@ -794,10 +792,10 @@ public class SearchPhaseControllerTests extends ESTestCase {
         latch.await();
         // 4*3 results = 12 we get result 5 to 10 here with from=5 and size=5
         SearchPhaseController.ReducedQueryPhase reduce = consumer.reduce();
-        ScoreDoc[] scoreDocs = reduce.sortedTopDocs.scoreDocs;
+        ScoreDoc[] scoreDocs = reduce.sortedTopDocs().scoreDocs();
         assertEquals(5, scoreDocs.length);
-        assertEquals(100.f, reduce.maxScore, 0.0f);
-        assertEquals(12, reduce.totalHits.value);
+        assertEquals(100.f, reduce.maxScore(), 0.0f);
+        assertEquals(12, reduce.totalHits().value);
         assertEquals(95.0f, scoreDocs[0].score, 0.0f);
         assertEquals(94.0f, scoreDocs[1].score, 0.0f);
         assertEquals(93.0f, scoreDocs[2].score, 0.0f);
@@ -842,15 +840,15 @@ public class SearchPhaseControllerTests extends ESTestCase {
         latch.await();
         SearchPhaseController.ReducedQueryPhase reduce = consumer.reduce();
         assertAggReduction(request);
-        assertEquals(Math.min(expectedNumResults, size), reduce.sortedTopDocs.scoreDocs.length);
-        assertEquals(expectedNumResults, reduce.totalHits.value);
-        assertEquals(max.get(), ((FieldDoc) reduce.sortedTopDocs.scoreDocs[0]).fields[0]);
-        assertTrue(reduce.sortedTopDocs.isSortedByField);
-        assertEquals(1, reduce.sortedTopDocs.sortFields.length);
-        assertEquals("field", reduce.sortedTopDocs.sortFields[0].getField());
-        assertEquals(SortField.Type.INT, reduce.sortedTopDocs.sortFields[0].getType());
-        assertNull(reduce.sortedTopDocs.collapseField);
-        assertNull(reduce.sortedTopDocs.collapseValues);
+        assertEquals(Math.min(expectedNumResults, size), reduce.sortedTopDocs().scoreDocs().length);
+        assertEquals(expectedNumResults, reduce.totalHits().value);
+        assertEquals(max.get(), ((FieldDoc) reduce.sortedTopDocs().scoreDocs()[0]).fields[0]);
+        assertTrue(reduce.sortedTopDocs().isSortedByField());
+        assertEquals(1, reduce.sortedTopDocs().sortFields().length);
+        assertEquals("field", reduce.sortedTopDocs().sortFields()[0].getField());
+        assertEquals(SortField.Type.INT, reduce.sortedTopDocs().sortFields()[0].getType());
+        assertNull(reduce.sortedTopDocs().collapseField());
+        assertNull(reduce.sortedTopDocs().collapseValues());
     }
 
     public void testConsumerFieldCollapsing() throws Exception {
@@ -892,17 +890,17 @@ public class SearchPhaseControllerTests extends ESTestCase {
         latch.await();
         SearchPhaseController.ReducedQueryPhase reduce = consumer.reduce();
         assertAggReduction(request);
-        assertEquals(3, reduce.sortedTopDocs.scoreDocs.length);
-        assertEquals(expectedNumResults, reduce.totalHits.value);
-        assertEquals(a, ((FieldDoc) reduce.sortedTopDocs.scoreDocs[0]).fields[0]);
-        assertEquals(b, ((FieldDoc) reduce.sortedTopDocs.scoreDocs[1]).fields[0]);
-        assertEquals(c, ((FieldDoc) reduce.sortedTopDocs.scoreDocs[2]).fields[0]);
-        assertTrue(reduce.sortedTopDocs.isSortedByField);
-        assertEquals(1, reduce.sortedTopDocs.sortFields.length);
-        assertEquals("field", reduce.sortedTopDocs.sortFields[0].getField());
-        assertEquals(SortField.Type.STRING, reduce.sortedTopDocs.sortFields[0].getType());
-        assertEquals("field", reduce.sortedTopDocs.collapseField);
-        assertArrayEquals(collapseValues, reduce.sortedTopDocs.collapseValues);
+        assertEquals(3, reduce.sortedTopDocs().scoreDocs().length);
+        assertEquals(expectedNumResults, reduce.totalHits().value);
+        assertEquals(a, ((FieldDoc) reduce.sortedTopDocs().scoreDocs()[0]).fields[0]);
+        assertEquals(b, ((FieldDoc) reduce.sortedTopDocs().scoreDocs()[1]).fields[0]);
+        assertEquals(c, ((FieldDoc) reduce.sortedTopDocs().scoreDocs()[2]).fields[0]);
+        assertTrue(reduce.sortedTopDocs().isSortedByField());
+        assertEquals(1, reduce.sortedTopDocs().sortFields().length);
+        assertEquals("field", reduce.sortedTopDocs().sortFields()[0].getField());
+        assertEquals(SortField.Type.STRING, reduce.sortedTopDocs().sortFields()[0].getType());
+        assertEquals("field", reduce.sortedTopDocs().collapseField());
+        assertArrayEquals(collapseValues, reduce.sortedTopDocs().collapseValues());
     }
 
     public void testConsumerSuggestions() throws Exception {
@@ -981,43 +979,43 @@ public class SearchPhaseControllerTests extends ESTestCase {
         }
         latch.await();
         SearchPhaseController.ReducedQueryPhase reduce = consumer.reduce();
-        assertEquals(3, reduce.suggest.size());
+        assertEquals(3, reduce.suggest().size());
         {
-            TermSuggestion term = reduce.suggest.getSuggestion("term");
+            TermSuggestion term = reduce.suggest().getSuggestion("term");
             assertEquals(1, term.getEntries().size());
             assertEquals(1, term.getEntries().get(0).getOptions().size());
             assertEquals(maxScoreTerm, term.getEntries().get(0).getOptions().get(0).getScore(), 0f);
         }
         {
-            PhraseSuggestion phrase = reduce.suggest.getSuggestion("phrase");
+            PhraseSuggestion phrase = reduce.suggest().getSuggestion("phrase");
             assertEquals(1, phrase.getEntries().size());
             assertEquals(1, phrase.getEntries().get(0).getOptions().size());
             assertEquals(maxScorePhrase, phrase.getEntries().get(0).getOptions().get(0).getScore(), 0f);
         }
         {
-            CompletionSuggestion completion = reduce.suggest.getSuggestion("completion");
+            CompletionSuggestion completion = reduce.suggest().getSuggestion("completion");
             assertEquals(1, completion.getSize());
             assertEquals(1, completion.getOptions().size());
             CompletionSuggestion.Entry.Option option = completion.getOptions().get(0);
             assertEquals(maxScoreCompletion, option.getScore(), 0f);
         }
         assertAggReduction(request);
-        assertEquals(1, reduce.sortedTopDocs.scoreDocs.length);
-        assertEquals(maxScoreCompletion, reduce.sortedTopDocs.scoreDocs[0].score, 0f);
-        assertEquals(0, reduce.sortedTopDocs.scoreDocs[0].doc);
-        assertNotEquals(-1, reduce.sortedTopDocs.scoreDocs[0].shardIndex);
-        assertEquals(0, reduce.totalHits.value);
-        assertFalse(reduce.sortedTopDocs.isSortedByField);
-        assertNull(reduce.sortedTopDocs.sortFields);
-        assertNull(reduce.sortedTopDocs.collapseField);
-        assertNull(reduce.sortedTopDocs.collapseValues);
+        assertEquals(1, reduce.sortedTopDocs().scoreDocs().length);
+        assertEquals(maxScoreCompletion, reduce.sortedTopDocs().scoreDocs()[0].score, 0f);
+        assertEquals(0, reduce.sortedTopDocs().scoreDocs()[0].doc);
+        assertNotEquals(-1, reduce.sortedTopDocs().scoreDocs()[0].shardIndex);
+        assertEquals(0, reduce.totalHits().value);
+        assertFalse(reduce.sortedTopDocs().isSortedByField());
+        assertNull(reduce.sortedTopDocs().sortFields());
+        assertNull(reduce.sortedTopDocs().collapseField());
+        assertNull(reduce.sortedTopDocs().collapseValues());
     }
 
     public void testProgressListener() throws Exception {
         int expectedNumResults = randomIntBetween(10, 100);
         for (int bufferSize : new int[] { expectedNumResults, expectedNumResults / 2, expectedNumResults / 4, 2 }) {
             SearchRequest request = randomSearchRequest();
-            request.source(new SearchSourceBuilder().aggregation(AggregationBuilders.avg("foo")));
+            request.source(new SearchSourceBuilder().aggregation(new MaxAggregationBuilder("test")));
             request.setBatchedReduceSize(bufferSize);
             AtomicInteger numQueryResultListener = new AtomicInteger();
             AtomicInteger numQueryFailureListener = new AtomicInteger();
@@ -1079,7 +1077,7 @@ public class SearchPhaseControllerTests extends ESTestCase {
                         new DocValueFormat[0]
                     );
                     InternalAggregations aggs = InternalAggregations.from(
-                        Collections.singletonList(new InternalMax("test", (double) number, DocValueFormat.RAW, Collections.emptyMap()))
+                        Collections.singletonList(new Max("test", (double) number, DocValueFormat.RAW, Collections.emptyMap()))
                     );
                     result.aggregations(aggs);
                     result.setShardIndex(id);
@@ -1094,23 +1092,23 @@ public class SearchPhaseControllerTests extends ESTestCase {
             latch.await();
             SearchPhaseController.ReducedQueryPhase reduce = consumer.reduce();
             assertAggReduction(request);
-            InternalMax internalMax = (InternalMax) reduce.aggregations.asList().get(0);
-            assertEquals(max.get(), internalMax.getValue(), 0.0D);
-            assertEquals(1, reduce.sortedTopDocs.scoreDocs.length);
-            assertEquals(max.get(), reduce.maxScore, 0.0f);
-            assertEquals(expectedNumResults, reduce.totalHits.value);
-            assertEquals(max.get(), reduce.sortedTopDocs.scoreDocs[0].score, 0.0f);
-            assertFalse(reduce.sortedTopDocs.isSortedByField);
-            assertNull(reduce.sortedTopDocs.sortFields);
-            assertNull(reduce.sortedTopDocs.collapseField);
-            assertNull(reduce.sortedTopDocs.collapseValues);
+            Max internalMax = (Max) reduce.aggregations().asList().get(0);
+            assertEquals(max.get(), internalMax.value(), 0.0D);
+            assertEquals(1, reduce.sortedTopDocs().scoreDocs().length);
+            assertEquals(max.get(), reduce.maxScore(), 0.0f);
+            assertEquals(expectedNumResults, reduce.totalHits().value);
+            assertEquals(max.get(), reduce.sortedTopDocs().scoreDocs()[0].score, 0.0f);
+            assertFalse(reduce.sortedTopDocs().isSortedByField());
+            assertNull(reduce.sortedTopDocs().sortFields());
+            assertNull(reduce.sortedTopDocs().collapseField());
+            assertNull(reduce.sortedTopDocs().collapseValues());
 
-            assertEquals(reduce.aggregations, finalAggsListener.get());
-            assertEquals(reduce.totalHits, totalHitsListener.get());
+            assertEquals(reduce.aggregations(), finalAggsListener.get());
+            assertEquals(reduce.totalHits(), totalHitsListener.get());
 
             assertEquals(expectedNumResults, numQueryResultListener.get());
             assertEquals(0, numQueryFailureListener.get());
-            assertEquals(numReduceListener.get(), reduce.numReducePhases);
+            assertEquals(numReduceListener.get(), reduce.numReducePhases());
         }
     }
 
@@ -1124,7 +1122,7 @@ public class SearchPhaseControllerTests extends ESTestCase {
 
     private void testReduceCase(int numShards, int bufferSize, boolean shouldFail) throws Exception {
         SearchRequest request = new SearchRequest();
-        request.source(new SearchSourceBuilder().aggregation(AggregationBuilders.avg("foo")).size(0));
+        request.source(new SearchSourceBuilder().aggregation(new MaxAggregationBuilder("test")).size(0));
         request.setBatchedReduceSize(bufferSize);
         AtomicBoolean hasConsumedFailure = new AtomicBoolean();
         AssertingCircuitBreaker circuitBreaker = new AssertingCircuitBreaker(CircuitBreaker.REQUEST);
@@ -1156,7 +1154,7 @@ public class SearchPhaseControllerTests extends ESTestCase {
                     new DocValueFormat[0]
                 );
                 InternalAggregations aggs = InternalAggregations.from(
-                    Collections.singletonList(new InternalMax("test", 0d, DocValueFormat.RAW, Collections.emptyMap()))
+                    Collections.singletonList(new Max("test", 0d, DocValueFormat.RAW, Collections.emptyMap()))
                 );
                 result.aggregations(aggs);
                 result.setShardIndex(index);
@@ -1180,7 +1178,7 @@ public class SearchPhaseControllerTests extends ESTestCase {
             assertThat(exc.getMessage(), containsString("<reduce_aggs>"));
             circuitBreaker.shouldBreak.set(false);
         } else {
-            SearchPhaseController.ReducedQueryPhase phase = consumer.reduce();
+            consumer.reduce();
         }
         consumer.close();
         assertThat(circuitBreaker.allocated, equalTo(0L));
@@ -1221,7 +1219,7 @@ public class SearchPhaseControllerTests extends ESTestCase {
                 result.size(1);
                 expectThrows(Exception.class, () -> consumer.consumeResult(result, () -> {}));
             }
-            assertNull(consumer.reduce().aggregations);
+            assertNull(consumer.reduce().aggregations());
         }
     }
 
